--- a/README.rdoc
+++ b/README.rdoc
@@ -1,13 +1,13 @@
 == README
 == README
 == README
-== README
-== README
-== README
 
 This README would normally document whatever steps are necessary to get the
 application up and running.
 
+Things you may want to cover:
+Things you may want to cover:
+Things you may want to cover:
 Things you may want to cover:
 
 * Ruby version
